css/7.84-bootstrap-landing-page.css
html, body {
  height: 100%;
  width: 100%;
}
body {
  background-image: url(https://images.unsplash.com/photo-1415369629372-26f2fe60c467);
  background-size: cover;
  background-position: center;
  color: white;
  text-align: center

}

.content {
  padding-top: 25%;
  font-family: Lato, sans-serif;
  text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
               0px 8px 13px rgba(0,0,0,0.1),
               0px 18px 23px rgba(0,0,0,0.1);
}

h1 {
  font-weight: 700;
  font-size: 5em;
}

hr {
  width: 400px;
  border-top: 1px solid #f8f8f8;
  border-bottom: 1px solid rgba(0,0,0,0.2);
}

